force-app/main/default/objects/TTI_Error_Log__c/TTI_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>