force-app/main/default/objects/TTI_Error_Log__c/fields/TTI_Cause__c.field-meta.xml
<CustomField>
    <fullName>TTI_Cause__c</fullName>
    <label>Cause</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>