force-app/main/default/objects/TTI_Error_Log__c/fields/TTI_Input_Parameters__c.field-meta.xml
<CustomField>
    <fullName>TTI_Input_Parameters__c</fullName>
    <label>Input Parameters</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>