force-app/main/default/objects/TTI_Error_Log__c/fields/TTI_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>TTI_Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>