force-app/main/default/objects/TTI_Error_Log__c/fields/TTI_Message__c.field-meta.xml
<CustomField>
    <fullName>TTI_Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>