force-app/main/default/objects/TTI_Error_Log__c/fields/TTI_Stack_Trace_String__c.field-meta.xml
<CustomField>
    <fullName>TTI_Stack_Trace_String__c</fullName>
    <label>Stack Trace String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>