force-app/main/default/objects/TTI_Error_Log__c/fields/TTI_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>TTI_Type_Name__c</fullName>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>