force-app/main/default/objects/TTI_Error_Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Module_Name__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>TTI_Type_Name__c</columns>
    <columns>TTI_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>BlackhawkAPIService</value>
    </filters>
    <label>BlackhawkAPI Errors</label>
</ListView>